Fixes h1 font-size on small screens

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -56,7 +56,7 @@ h6 {
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: clamp(min(11vw, 3rem), 11vw, 3rem);
 }
 
 nav {
